tests/lean/protected.lean.expected.out
protected.lean:9:6: error: unknown identifier 'C'
D : Prop
